test_suite/ERROR_incompatible_types.out
ERROR_incompatible_types.java: 12:  Semantic Error: Incompatible types: `B` can't be converted to `C`
ERROR_incompatible_types.java: 23:  Semantic Error: No matching method with id: `test2`
